add the simple logic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,50 @@
 
 
     <form>
-      <input id="q1" type="text">
+
+      <label> to be or not to be?
+        <br>
+        be: <input name="theQuestion" value="be" checked type="radio" >
+        nah: <input id="die" name="theQuestion" value="not to" type="radio" >
+      </label>
+
+      <br><br>
+
+      <label> do you like hamburgers?
+        <br>
+        yes i do: <input name="hamburger" value="love" checked type="radio" >
+        no i dont: <input name="hamburger" value="hate" type="radio">
+      </label>
+
+      <br><br>
+
+      <label> do you like mr.superman?
+        <br>
+        kinda: <input name="superman" value="kinda" checked type="radio" >
+        ehh: <input name="superman" value="ehh" type="radio">
+      </label>
+
+      <br><br>
+
+      <label> do you like seafood?
+        <br>
+        why not? :  <input name="seafood" value="why not?" checked type="radio" >
+        no no no:  <input name="seafood" value="no no no" type="radio">
+      </label>
+
+      <br><br>
+
+      <label> do you like mr.aquaman?
+        <br>
+        of course :  <input name="aquaman" value="hellyes" checked type="radio" >
+        why:  <input name="aquaman" value="no no no" type="radio">
+      </label>
+
+      <br><br>
+
+
+      <button type="submit" name="button"></button>
+
     </form>
 
   </div>
