apply bootstrap css, and custom css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <label> to be or not to be?
         <br>
         be: <input name="theQuestion" value="be" checked type="radio" >
+        <br>
         nah: <input id="die" name="theQuestion" value="not to" type="radio" >
       </label>
 
@@ -28,6 +29,7 @@
       <label> do you like hamburgers?
         <br>
         yes i do: <input name="hamburger" value="love" checked type="radio" >
+        <br>
         no i dont: <input name="hamburger" value="hate" type="radio">
       </label>
 
@@ -36,14 +38,16 @@
       <label> do you like mr.superman?
         <br>
         kinda: <input name="superman" value="kinda" checked type="radio" >
+        <br>
         ehh: <input name="superman" value="ehh" type="radio">
       </label>
 
       <br><br>
 
-      <label> do you like seafood?
+      <label> do you want seafood?
         <br>
         why not? :  <input name="seafood" value="why not?" checked type="radio" >
+        <br>
         no no no:  <input name="seafood" value="no no no" type="radio">
       </label>
 
@@ -52,16 +56,38 @@
       <label> do you like mr.aquaman?
         <br>
         of course :  <input name="aquaman" value="hellyes" checked type="radio" >
+        <br>
         why:  <input name="aquaman" value="no no no" type="radio">
       </label>
 
       <br><br>
 
 
-      <button type="submit" name="button"></button>
+      <button type="submit" name="button" class="btn btn-danger"> PRESS </button>
 
     </form>
+
+
+
+    <div class="location_images">
+      <h1></h1>
+
+      <div class="grave_image">
+        <img src="imgs/grave.jpg" alt="">
+      </div>
+
+      <div class="land_image">
+        <img src="imgs/land.jpg" alt="">
+      </div>
+
+      <div class="sea_image">
+        <img src="imgs/sea.jpg" alt="the sea">
+      </div>
+
+    </div>
 
   </div>
   </body>
 </html>
+
+<!-- <img src="imgs/" alt=""> -->
