add readme, and fufill assignment requirements

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       <h1></h1>
 
       <div class="grave_image">
-        <img src="imgs/grave.jpg" alt="">
+        <img src="imgs/grave.jpg" alt="your grave">
       </div>
 
       <div class="land_image">
-        <img src="imgs/land.jpg" alt="">
+        <img src="imgs/land.jpg" alt="the land">
       </div>
 
       <div class="sea_image">
@@ -89,5 +89,3 @@
   </div>
   </body>
 </html>
-
-<!-- <img src="imgs/" alt=""> -->
