flush out the logic, change several variable names, and add two locations

--- a/index.html
+++ b/index.html
@@ -19,45 +19,45 @@
 
       <label> to be or not to be?
         <br>
-        be: <input name="theQuestion" value="be" checked type="radio" >
+        be: <input name="theQuestion" value="1" checked type="radio" >
         <br>
-        nah: <input id="die" name="theQuestion" value="not to" type="radio" >
+        nah: <input id="die" name="theQuestion" value="0" type="radio" >
       </label>
 
       <br><br>
 
       <label> do you like hamburgers?
         <br>
-        yes i do: <input name="hamburger" value="love" checked type="radio" >
+        yes i do: <input name="hamburger" value="1" checked type="radio" >
         <br>
-        no i dont: <input name="hamburger" value="hate" type="radio">
+        no i dont: <input name="hamburger" value="0" type="radio">
       </label>
 
       <br><br>
 
       <label> do you like mr.superman?
         <br>
-        kinda: <input name="superman" value="kinda" checked type="radio" >
+        kinda: <input name="superman" value="1" checked type="radio" >
         <br>
-        ehh: <input name="superman" value="ehh" type="radio">
+        ehh: <input name="superman" value="0" type="radio">
       </label>
 
       <br><br>
 
       <label> do you want seafood?
         <br>
-        why not? :  <input name="seafood" value="why not?" checked type="radio" >
+        why not? :  <input name="seafood" value="1" checked type="radio" >
         <br>
-        no no no:  <input name="seafood" value="no no no" type="radio">
+        no no no:  <input name="seafood" value="0" type="radio">
       </label>
 
       <br><br>
 
       <label> do you like mr.aquaman?
         <br>
-        of course :  <input name="aquaman" value="hellyes" checked type="radio" >
+        of course :  <input name="aquaman" value="1" checked type="radio" >
         <br>
-        why:  <input name="aquaman" value="no no no" type="radio">
+        why:  <input name="aquaman" value="0" type="radio">
       </label>
 
       <br><br>
@@ -71,6 +71,14 @@
 
     <div class="location_images">
       <h1></h1>
+
+      <div class="anywhere_image">
+        <img src="imgs/anywhere.jpg" alt="anywhere is fine for someone who likes everything">
+      </div>
+
+      <div class="beach_image">
+        <img src="imgs/beach.jpg" alt="the beach">
+      </div>
 
       <div class="grave_image">
         <img src="imgs/grave.jpg" alt="your grave">
